# goit-pythonweb-hw-10

./: Dockerfile  database.py  docker-compose.yaml  main.py  models.py  pyproject.toml  schemas.py
config/: config.py
database/: db.py  models.py
repository/: contacts.py  users.py
routes/: auth.py  contacts.py  users.py
services/: auth.py  cloudinary.py  email.py
